--- a/attendees_microservice/requirements.txt
+++ b/attendees_microservice/requirements.txt
@@ -20,6 +20,7 @@ urllib3==1.26.9
 whitenoise==5.3.0
 gunicorn==20.1.0
 django-crontab==0.7.1
+django-cors-headers==3.11.0 
 pika==1.2.0
 psycopg2==2.9.3
 dj-database-url==0.5.0
