--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,5 +102,6 @@ services:
     environment:
       - HOST=0.0.0.0
       - PORT=3001
+      - NODE_ENV=development
     ports:
       - "3001:3001"
